src/objects/QPMS__For_use_by_User_Facility_Importer__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Address_Line_1__c</fullName>
        <description>Address-Line 1</description>
        <inlineHelpText>Address-Line 1</inlineHelpText>
        <label>Address-Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Address_Line_2__c</fullName>
        <description>Address-Line 2</description>
        <inlineHelpText>Address-Line 2</inlineHelpText>
        <label>Address-Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Age_UOM__c</fullName>
        <label>Age UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
                <value>
                    <fullName>Months(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approximate_Age_of_Device__c</fullName>
        <label>F9. Approximate Age of Device</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Check_One__c</fullName>
        <label>F1. For Use By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Facility</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Country_ForUse__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Date_User_Facility__c</fullName>
        <label>F6. Date User Facility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_this_Report_FDA__c</fullName>
        <label>Date of this Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_this_Report__c</fullName>
        <label>F8. Date of this Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_this_Report_sent_to_Manufacturer__c</fullName>
        <label>Date of this Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Address__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__First_Given_Name__c</fullName>
        <description>First/Given Name</description>
        <inlineHelpText>First/Given Name</inlineHelpText>
        <label>First/Given Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <description>followup number</description>
        <formula>TEXT(QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c)</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Location_Where_Event_Occurred__c</fullName>
        <label>Location Where Event Occurred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Outpatient Treatment Facility</fullName>
                </value>
                <value>
                    <fullName>Outpatient Diagnostic Facility</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Facility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Address_Line_1__c</fullName>
        <description>Address-Line 1</description>
        <inlineHelpText>Address-Line 1</inlineHelpText>
        <label>Address-Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Address_Line_2__c</fullName>
        <description>Address-Line 2</description>
        <inlineHelpText>Address-Line 2</inlineHelpText>
        <label>Address-Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Email_Address__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Establishment_Name__c</fullName>
        <description>Establishment Name</description>
        <inlineHelpText>Establishment Name</inlineHelpText>
        <label>Establishment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Phone__c</fullName>
        <description>Phone #</description>
        <inlineHelpText>Phone #</inlineHelpText>
        <label>Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Post_Office_or_Zip_Code__c</fullName>
        <description>Post Office or Zip Code</description>
        <inlineHelpText>Post Office or Zip Code</inlineHelpText>
        <label>Post Office or Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturers_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturers_State__c</fullName>
        <description>State, Province, or Territory</description>
        <inlineHelpText>State, Province, or Territory</inlineHelpText>
        <label>State, Province, or Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QPMS__Manufacturers_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Middle_Name__c</fullName>
        <description>Middle Name</description>
        <inlineHelpText>Middle Name</inlineHelpText>
        <label>Middle Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Other__c</fullName>
        <description>Other</description>
        <inlineHelpText>Other</inlineHelpText>
        <label>Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Post_Office_or_Zip_Code__c</fullName>
        <description>Post Office or Zip Code</description>
        <inlineHelpText>Post Office or Zip Code</inlineHelpText>
        <label>Post Office or Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>For use by User Facility/Importers</relationshipLabel>
        <relationshipName>For_use_by_User_Facility_Importers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Report_Sent__c</fullName>
        <label>Report Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Report_Sent_to_Manufacturer__c</fullName>
        <label>Report Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__State_Province_or_Territory_ForUse__c</fullName>
        <description>State, Province, or Territory</description>
        <inlineHelpText>State, Province, or Territory</inlineHelpText>
        <label>State, Province, or Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QPMS__Country_ForUse__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>Title (e.g., Mr., Ms.)</description>
        <inlineHelpText>Title (e.g., Mr., Ms.)</inlineHelpText>
        <label>Title (e.g., Mr., Ms.)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UF_Importer_Report_Number__c</fullName>
        <label>F2. UF/Importer Report Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>For use by User Facility/Importer</label>
    <nameField>
        <label>For use by User Facility/Importer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>For use by User Facility/Importers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>